[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognilink"
version = "0.1.0"
description = "Document-to-graph knowledge mapper powered by LangChain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CogniLink Contributors" }
]
keywords = ["agents", "graph", "context", "rag", "llm", "langchain", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain-core>=0.3.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
pdf = ["PyPDF2>=3.0.0"]
excel = ["openpyxl>=3.1.0"]
all = ["PyPDF2>=3.0.0", "openpyxl>=3.1.0"]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.90.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/cognilink/cognilink"
Documentation = "https://cognilink.readthedocs.io"
Repository = "https://github.com/cognilink/cognilink"
Issues = "https://github.com/cognilink/cognilink/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"

[tool.ruff]
target-version = "py311"
src = ["cognilink"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cognilink"]
